--- a/beadando/beadando.csproj
+++ b/beadando/beadando.csproj
@@ -21,4 +21,12 @@
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Toys\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Toys\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Toys\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Toys\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Toys\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
