--- a/toystore/toystore.csproj
+++ b/toystore/toystore.csproj
@@ -29,4 +29,8 @@
       <_ContentIncludedByDefault Remove="Views\Toys\Index.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\files\" />
+    </ItemGroup>
+
 </Project>
